--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,20 +1,17 @@
 /* Navbar Styles */
-.sub-nav{
-  /* width: 1200px; */
-  /* height: 120px; */
-  width: 100%;
-  position: fixed;
-  background-color: teal;
+body {
+  padding-top: 110px;
+   /* Adjust based on navbar heights */
 }
 .navbar {
-    background-color: #003366;
-    padding: 10px 20px;
-    width: 100%;
-    /* position: fixed; */
-    top: 0;
-    left: 0;
-    z-index: 1000;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+  background-color: #003366;
+  padding: 10px 20px;
+  width: 100%;
+  position: fixed;
+  top: 60px; /* Adjust based on subnavbar height */
+  left: 0;
+  z-index: 999; /* Keep it below subnavbar */
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
   }
   
   /* Navbar Container */
@@ -24,7 +21,7 @@
     align-items: center;
     width: 100%;
     max-width: 1200px;
-    margin: auto;
+    margin-left: 20%;
   }
   
   /* Logo */
