--- a/src/Components/SubNavbar.css
+++ b/src/Components/SubNavbar.css
@@ -1,11 +1,17 @@
 .subnavbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    gap : 120px;
     padding: 10px 20px;
     background-color: white;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-  }
+    width: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000; /* Ensure it's on top */
+}
   
   .logo {
     display: flex;
@@ -25,7 +31,7 @@
     align-items: center;
     border: 2px solid #00aaff;
     border-radius: 20px;
-    padding: 5px 10px;
+    padding: 5px;
   }
   
   .search-bar input {
@@ -43,7 +49,7 @@
   
   .menu-links {
     display: flex;
-    gap: 20px;
+    gap: 25px;
   }
   
   .menu-links a {
@@ -64,14 +70,14 @@
     transition: width 0.3s ease-in-out;
   }
   
-  .menu-links:hover::after {
+  /* .menu-links:hover::after {
     width: 100%;
   }
   
   .menu-links .icon {
     margin-right: 5px;
     color: #00aaff;
-  }
+  } */
   
   .contact-btn {
     display: flex;
