--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -4,7 +4,7 @@ body {
    /* Adjust based on navbar heights */
 }
 .navbar {
-  background-color: #003366;
+  background-color:#21759b;
   padding: 10px 20px;
   width: 100%;
   position: fixed;
