--- a/src/Components/SubNavbar.css
+++ b/src/Components/SubNavbar.css
@@ -58,6 +58,10 @@
     font-weight: 500;
     display: flex;
     align-items: center;
+    text-align: center;
+  }
+  .menu-links a:hover {
+    color: #21759b;
   }
   .menu-links::after {
     content: "";
@@ -67,19 +71,63 @@
     width: 0%;
     height: 3px;  /* Thickness of the underline */
     background-color: #00aaff; /* Color of the underline */
-    transition: width 0.3s ease-in-out;
+    /* transition: width 0.3s ease-in-out; */
   }
-  
-  /* .menu-links:hover::after {
-    width: 100%;
-  }
-  
-  .menu-links .icon {
-    margin-right: 5px;
-    color: #00aaff;
-  } */
-  
-  .contact-btn {
+  /* Dropdown Styles */
+.dropdown {
+  position: relative;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background: white;
+  min-width: 180px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 5px;
+  top: 100%;
+  /* left: 50; */
+  right: 50;
+  text-align: center; 
+  transform: translateX(30%); 
+  /* Centering the dropdown */
+  z-index: 10;
+}
+/* Dropdown Items with Hover Effect */
+.dropdown-item {
+  display: block;
+  padding: 10px;
+  color:#21759b; /* Text color */
+  text-decoration: none;
+  font-weight: bold;
+  /* border: 2px solid #00a3c8; Border color */
+  /* background-color: #f8fdff; Light background */
+  border-radius: 8px; /* Rounded corners */
+  /* text-align: center; */
+  /* transition: all 0.3s ease; */
+  margin: 5px;
+  width: 80%; 
+  font-size: 15px;
+}
+
+.dropdown-item:hover {
+  /* background-color: #00a3c8; Background color on hover */
+  color: white; /* Text color on hover */
+  border: 2px solid #21759b; /* Border color */
+ 
+}
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+/* Show dropdown on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+} */
+
+.contact-btn {
     display: flex;
     align-items: center;
     border: 2px solid #00aaff;
@@ -89,8 +137,26 @@
     font-weight: bold;
     cursor: pointer;
   }
+  .contact-btn {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding: 8px 15px;
+    /* border: 5px solid brown; */
+    border-radius: 5px solid brown;
+    /* border-radius: 5px solid blue; */
+    font-weight: bold;
+    cursor: pointer;
+  }
   
   .phone-icon {
+    color: white;
+  }
+  .phone-icon {
     margin-right: 5px;
+    color:#21759b;
+  }
+  .number{
+    font-weight: bold;
   }
   
