--- a/src/Pages/Ladakh/Itenaries/components/SidebarForm.css
+++ b/src/Pages/Ladakh/Itenaries/components/SidebarForm.css
@@ -2,7 +2,7 @@
 /* Sidebar Container */
 .sidebar-container {
     width: 100%;
-    max-width: 400px;
+    /* max-width: 400px; */
     background: #ffffff;
     border-radius: 10px;
     /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
@@ -67,7 +67,8 @@
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     /* border: 2px solid #00AEEF; */
     margin-bottom: 1%;
-    margin-right: 5%;
+    /* margin-right: 0; */
+    /* margin-right: 5%; */
 }
 
 /* Header Styling */
