--- a/src/Pages/Ladakh/Itenaries/components/TabNavigation.css
+++ b/src/Pages/Ladakh/Itenaries/components/TabNavigation.css
@@ -1,6 +1,6 @@
 .tab-container {
     display: flex;
-    /* background-color: #e8faff;
+    background-color: #e8faff;
     padding: 12px;
     border-radius: 10px;
     justify-content: space-between;
@@ -8,7 +8,7 @@
     position: sticky;
     /* top: 0;
     left: 0; */
-    /* width: 100%; Make it span full width */
+    width: 800px;
     /* z-index: 1000; Ensure it stays above other elements */
     /* scroll-behavior: smooth; */
     /* box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1); Optional: Add shadow for better visibility */ 
