--- a/src/Pages/Ladakh/Itenaries/Subcomponents/Exclusions.css
+++ b/src/Pages/Ladakh/Itenaries/Subcomponents/Exclusions.css
@@ -28,6 +28,9 @@
     font-size: 16px;
     color: #333;
     margin-bottom: 10px;
+    text-align: left;
+    margin-left: 8%;
+    font-weight: 200;
   }
   
   .icon {
