--- a/src/Pages/Ladakh/Itenaries/Subcomponents/Inclusions.css
+++ b/src/Pages/Ladakh/Itenaries/Subcomponents/Inclusions.css
@@ -1,5 +1,5 @@
 .inclusions-container {
-    background-color: #f5fdf4; /* Light green background */
+    /* background-color: #f5fdf4; Light green background */
     padding: 20px;
     border-radius: 8px;
     width: 700px;
