--- a/src/Pages/Ladakh/Itenaries/Subcomponents/Exclusions.css
+++ b/src/Pages/Ladakh/Itenaries/Subcomponents/Exclusions.css
@@ -33,6 +33,26 @@
     font-weight: 200;
   }
   
+  .icon-text-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px 0;
+  }
+  
+  .arrow-icon {
+    flex-shrink: 0;
+    margin-top: 2px;
+  }
+  
+  .exclusion-item {
+    margin: 10px 0;
+  }
+  
+  .exclusion-item span {
+    line-height: 1.5;
+  }
+  
   .icon {
     color: red;
     margin-right: 10px;
