--- a/src/Pages/Ladakh/Itenaries/Subcomponents/RegistrationForm.css
+++ b/src/Pages/Ladakh/Itenaries/Subcomponents/RegistrationForm.css
@@ -1,6 +1,8 @@
 .costing-form-container {
-  max-width: 500px;
-  margin: 40px auto;
+  /* max-width: 500px; */
+  width: 450px;
+  margin-top: 25px;
+  margin-left: 85px;
   padding: 30px;
   background-color: #ffffff;
   border-radius: 12px;
@@ -13,7 +15,10 @@
   margin-bottom: 25px;
   color: #333;
 }
-
+.input-form{
+  /* display: flex; */
+  /* justify-content: space-between; */
+}
 .costing-form-container label {
   display: block;
   margin: 10px 0 5px;
@@ -53,16 +58,15 @@
 
 .booking-container {
   display: flex;
-  gap: 15px;
-  padding: 30px;
-  /* justify-content: space-between; */
+  justify-content: space-around;
   /* flex-wrap: wrap; */
   background-color: #f9f9f9;
   font-family: sans-serif;
-}
+  padding: 30px;
+ }
 .summary-section {
   flex: 1;
-  min-width: 300px;
+  /* min-width: 300px; */
   display: flex;
   flex-direction: column;
   gap: 20px;
