--- a/src/Pages/UI/ItneariesSlideshow.css
+++ b/src/Pages/UI/ItneariesSlideshow.css
@@ -1,6 +1,6 @@
 .slideshow-container {
     width: 100%;
-    height: 500px;
+    height: 600px;
     margin: auto;
     overflow: hidden;
     border-radius: 10px;
@@ -27,6 +27,7 @@
 .download-btn {
     position: absolute;
     bottom: 30px; /* Adjust as needed */
+    /* left: 30%; */
     left: 50%;
     transform: translateX(-50%);
     display: flex;
@@ -40,10 +41,54 @@
     border: none;
     border-radius: 25px;
     cursor: pointer;
+    height: 45px;
+     transition: background-color 0.3s ease;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+}
+.whatsapp-btn{
+    position: absolute;
+    bottom: 30px; /* Adjust as needed */
+    /* left: 30%; */
+     left: 70%;
+   transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    background-color: rgb(78, 240, 78); /* Yellow button */
+    color: black;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    height: 45px;
+    transition: background-color 0.3s ease;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
+    
+}
+.requestcallback-btn{
+    position: absolute;
+    display: flex;
+    bottom: 30px; /* Adjust as needed */
+    left: 28%;
+    transform: translateX(-50%);
+    display: flex;
+    align-items: center;
+    gap: 1px;
+    background-color: #007BFF; /* Yellow button */
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    padding: 12px 20px;
+    height: 45px;
+    /* width: 150px; */
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
     transition: background-color 0.3s ease;
     box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2);
 }
-
 .download-btn:hover {
     background-color: #e6c300; /* Darker yellow */
 }
