--- a/src/MobileVersion/Components/Navbar/MobileNavbar.css
+++ b/src/MobileVersion/Components/Navbar/MobileNavbar.css
@@ -14,11 +14,17 @@
   justify-content: space-between;
   /* padding: 10px 12px; */
   background-color:#00BFFF;
-  color: #fff;
+  color: white;
+  /* border: 2px solid#00BFFF; */
 }
-
-.logo {
+.mobile-log-img{
+  width: 75px;
+  height: 30px;
+}
+.mobile-logo-video{
   width: 34px;
+  height: 35px;
+  /* background-color: #00BFFF; */
 }
 
 .phone-number {
